# cookiecutter-template

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/python/: generate_example.py
.github/workflows/: dependencies.yml  main.yml  quality.yml  schedule.yml  update-example.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: dependabot.yml
{{ cookiecutter.project_slug }}/.github/workflows/: codecov.yml  main.yml  quality.yml
